Adding patch shift endpoint
