# core/endpoints.go
@@ -24,4 +24,5 @@ var Endpoints = map[Endpoint]EndpointConfig{
 	//shifts
 	{Path: "/api/v1/shift", Method: "POST"}:   {RequireJWT: true, AccessLevel: models.AdminPermissionLevel},
 	{Path: "/api/v1/shift", Method: "DELETE"}: {RequireJWT: true, AccessLevel: models.AdminPermissionLevel},
+	{Path: "/api/v1/shift", Method: "PATCH"}:  {RequireJWT: true, AccessLevel: models.AdminPermissionLevel},
 }
