# main.go
@@ -226,5 +226,23 @@ func main() {
 		return nil
 	})
 
+	v1.Patch("/shift", func(c *fiber.Ctx) error {
+		req := shiftsModels.UpdateShiftRequest{}
+
+		err := json.Unmarshal(c.Body(), &req)
+		if err != nil {
+			return err
+		}
+
+		response := shiftsController.UpdateShift(c.Context(), req)
+		respBytes, err := json.Marshal(response)
+		if err != nil {
+			return err
+		}
+
+		c.Context().SetBody(respBytes)
+		return nil
+	})
+
 	app.Listen(":3000")
 }
